# amanuensis

./: .gitmodules  AmanuensisConfig.cmake.in  CMakeLists.txt  README.md  compile_commands.json
docs/: design-document.md
include/: amanuensis.hpp
include/amanuensis/: amanuensis.hpp  anamuensis.hpp  parser.hpp  reader.hpp  serialisation.hpp  value.hpp  writer.hpp
include/amanuensis/io/: parser-error.hpp  parser-result.hpp  reader.hpp  writer-options.hpp  writer.hpp
include/amanuensis/serialisation/: json-traits-std.hpp  json-traits.hpp  read-archive.hpp  serialization.hpp  serialize-macros.hpp  serialize.hpp  write-archive.hpp
src/: ordered-map.cpp  ordered-map.hpp  parser.cpp  reader.cpp  value.cpp  writer.cpp
src/io/: parser.cpp  parser.hpp  reader.cpp  writer-context.cpp  writer-context.hpp  writer.cpp
src/serialisation/: serialisation.cpp
test/: CMakeLists.txt  reader.test.cpp  round-trip.test.cpp  serialisation.test.cpp  value.test.cpp  writer.test.cpp
